[Block Library - Query Pagination]: Fix `center` alignment (#34739)

--- a/packages/block-library/src/query-pagination/editor.scss
+++ b/packages/block-library/src/query-pagination/editor.scss
@@ -6,6 +6,11 @@ $pagination-margin: 0.5em;
 	flex-direction: row;
 }
 
+// Center flex items. This has an equivalent in style.scss.
+.wp-block[data-align="center"] > .wp-block-query-pagination {
+	justify-content: center;
+}
+
 .editor-styles-wrapper {
 	.wp-block-query-pagination {
 		max-width: 100%;
